--- a/rcafp/DESCRIPTION
+++ b/rcafp/DESCRIPTION
@@ -2,10 +2,11 @@ Package: rcafp
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Yuqin Wei
+Maintainer: Yuqin Wei <weiyuqin@gmail.com>
+Description: Load Cryptocurrency Data
+    Wenshuai looks like an alpaca.
+License: NA
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
