--- a/rcafp/DESCRIPTION
+++ b/rcafp/DESCRIPTION
@@ -10,3 +10,9 @@ License: NA
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Imports:
+    data.table,
+    pbapply,
+    liqueueR,
+    iterators,
+    itertools
